Fix collapsing of BuySell boxes and some component ordering

--- a/web/app/assets/stylesheets/_shame.scss
+++ b/web/app/assets/stylesheets/_shame.scss
@@ -385,3 +385,9 @@ input[type=number] {
 .clickable {
     cursor: pointer;
 }
+
+@include breakpoint(xlarge) {
+    form.hide-container {
+        display: inherit !important;
+    }
+}
