--- a/web/app/components/Exchange/exchange.scss
+++ b/web/app/components/Exchange/exchange.scss
@@ -519,3 +519,7 @@ a.order-cancel > .icon > svg {
     fill : #e8564b;
   }
 }
+
+form.hide-container {
+    display: none;
+}
